--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -27,14 +27,14 @@
         </div>
         <div class="row">
             <div class="mb-3 col-5" >
-                <label for="location" class="form-label">Location:</label>
-                <input type="text" name="listing[location]" placeholder="Enter location" class="form-control" required>
-                <div class="invalid-feedback">Please Enter Location!</div>
+                <label for="address" class="form-label">Address:</label>
+                <input type="text" name="listing[address]" placeholder="Enter Address" class="form-control" required>
+                <div class="invalid-feedback">Please Enter Address!</div>
             </div>
             <div class="mb-3 col-7">
-                <label for="country" class="form-label" >Country:</label>
-                <input type="text" name="listing[country]" placeholder="Enter country" class="form-control" required>
-                <div class="invalid-feedback">Please Enter Country!</div>
+                <label for="location" class="form-label" >Location:</label>
+                <input type="text" name="listing[location]" placeholder="Enter Location" class="form-control" required>
+                <div class="invalid-feedback">Please Enter Location!</div>
             </div>
         </div>
        <br>
