--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -20,11 +20,17 @@
             <label for="image" class="form-label">Uplod Image:</label>
             <input type="file" name="listing[image]"  class="form-control" required>
         </div>
-        <div class="mb-3">
-            <label for="price" class="form-label" >Price:</label>
-            <input type="number" name="listing[price]" placeholder="Enter price" class="form-control" required>
-            <div class="invalid-feedback">Please Enter Valid Price!</div>
-        </div>
+        <div class="row">
+            <div class="mb-3 col-5" >
+                <label for="price" class="form-label" >Price:</label>
+                <input type="number" name="listing[price]" placeholder="Enter price" class="form-control" required>
+                <div class="invalid-feedback">Please Enter Valid Price!</div>
+            </div>
+            <div class="mb-3 col-7">
+                <label for="rating" class="form-label" >Rating:</label>
+                <input type="number" name="listing[rating]" placeholder="Enter Rating" class="form-control" required>
+                <div class="invalid-feedback">Please Enter Rating!</div>
+            </div>
         <div class="row">
             <div class="mb-3 col-5" >
                 <label for="address" class="form-label">Address:</label>
