Added one Button

--- a/views/booking/book.ejs
+++ b/views/booking/book.ejs
@@ -21,7 +21,7 @@
         </div>
         <div class="mb-3 ">
             <label for="address" class="form-label" ><b>Address:</b></label>
-            <input type="text" name="address" id="address" class="form-control" required value="Bhirud Colony">
+            <input type="text" name="address" id="address" class="form-control" required>
             <div class="invalid-feedback">Please Enter Address!</div>
         </div>
         <div class="row">
