Added one Button

--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -26,12 +26,12 @@
          </div>
         
          <div class="row"></div>
-           <div class="mb-3">
+           <div class="mb-3 col-md-6">
             <label for="price" class="form-label">Price:</label>
             <input type="number" name="listing[price]" class="form-control" value="<%= listing.price %>" required>
             <div class="invalid-feedback">Please Enter Price!</div>
              </div>
-             <div class="mb-3">
+             <div class="mb-3 col-md-6">
                <label for="rating" class="form-label">Rating:</label>
                <input type="number" name="listing[rating]" class="form-control" value="<%= listing.Rating %>" required>
                <div class="invalid-feedback">Please Enter Rating!</div>
