Added one Button

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -21,7 +21,7 @@
             <input type="file" name="listing[image]"  class="form-control" required>
         </div>
         <div class="row">
-            <div class="mb-3 col-6" >
+            <div class="mb-3 col-5" >
                 <label for="price" class="form-label" >Price:</label>
                 <input type="number" name="listing[price]" placeholder="Enter price" class="form-control" required>
                 <div class="invalid-feedback">Please Enter Valid Price!</div>
@@ -31,8 +31,9 @@
                 <input type="number" name="listing[rating]" placeholder="Enter Rating" class="form-control" required>
                 <div class="invalid-feedback">Please Enter Rating!</div>
             </div>
+        </div>
         <div class="row">
-            <div class="mb-3 col-5" >
+            <div class="mb-3 col-7" >
                 <label for="address" class="form-label">Address:</label>
                 <input type="text" name="listing[address]" placeholder="Enter Address" class="form-control" required>
                 <div class="invalid-feedback">Please Enter Address!</div>
