Added one Button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,6 +23,7 @@
   </style>
   
   <div id="container">
+    <h1 class="col-4 offfset-3">Welcome to the Wanderlust</h1>
     <a class="get-started" href="/listings">Get Started</a>
   </div>
   
