--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -23,7 +23,7 @@
     </div>
 
     <br>
-    <% if(currUser && currUser._id.equals(listing.owner._id)|| (currUser._id.equals('66d9335b4ac1705a6599d2eb'))) { %>
+    <% if((currUser._id.equals('66d9335b4ac1705a6599d2eb')) && currUser._id.equals(listing.owner._id)) { %>
     <div class="btns mb-5">
         <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn ">Edit</a>
         <form method="post" action="/listings/<%= listing._id %>?_method=DELETE">
