--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -28,7 +28,7 @@
             </div>
             <div class="mb-3 col-6">
                 <label for="rating" class="form-label" >Rating:</label>
-                <input type="number" name="listing[rating]" placeholder="Enter Rating" class="form-control" required>
+                <input type="number" name="listing[rating]" placeholder="Enter Rating" class="form-control" required min="1" max="5">
                 <div class="invalid-feedback">Please Enter Rating!</div>
             </div>
         </div>
