--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -8,7 +8,7 @@
     <div class="card col-6 offset-3 show-card listing-card mt-3">
                     <img class="card-img-top show-image" src="<%= listing.image.url %>" alt="listing_image">
                     <div class="card-body">
-                      <!-- <p class="card-text"> Owned By : <i><%= listing.owner.username%></i><br></p> -->
+                      <p class="card-text"> Owned By : <i><%= listing.owner.username%></i><br></p>
                      <div class="row mt-3">
                       <p class="card-text col-10">&#8377; <%= listing.price ? new Intl.NumberFormat("en-IN").format(listing.price) : '0' %>/night <br></p>
                       <p class="card-text col-2"> <%= listing.rating %> <b>&starf;</b><br></p>
