--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
   </style>
   
   <div id="container">
-    <h1 class="col-4 offfset-3 mb-3">Welcome to the Wanderlust</h1><br>
-    <a class="get-started" href="/listings">Get Started</a>
+    <div><h1 class="col-4 offfset-3 mb-3">Welcome to the Wanderlust</h1><br></div>
+    <div><a class="get-started" href="/listings">Get Started</a></div>
   </div>
   
