Added one more functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
   </style>
   
   <div id="container">
-    <div><h1 class="col-4 offfset-3 mb-3">Welcome to the Wanderlust</h1><br></div>
+    <div><h1 class="col-4 offfset-3 mb-3">Welcome to the Wanderlust</h1></div><br>
     <div><a class="get-started" href="/listings">Get Started</a></div>
   </div>
   
