--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -33,7 +33,7 @@
             </div>
             <div class="mb-3 col-md-7">
                <label for="rating" class="form-label">Rating:</label>
-               <input type="number" id="rating" name="listing[rating]" class="form-control" value="<%= listing.Rating %>" required step="0.1" min="0" max="5">
+               <input type="number" id="rating" name="listing[rating]" class="form-control" value="<%= listing.rating %>" required step="0.1" min="0" max="5">
                <div class="invalid-feedback">Please Enter Rating!</div>
             </div>
          </div>
