--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <style>
     #container {
       height: 90vh;
@@ -20,10 +20,29 @@
     .get-started:hover {
       transform: scale(1.03);
     }
+    .heading{
+      text-align: center;
+      margin-top: 200px;
+    }
+.div{
+  height: 10rem;
+  margin: 250px 0px 0px 500px;
+}
+.a{
+  margin-left: 160px;
+}
+
   </style>
-  
-  <div id="container">
-    <div><h1 class="col-4 offfset-3 mb-3">Welcome to the Wanderlust</h1></div><br>
-    <div><a class="get-started" href="/listings">Get Started</a></div>
+   <!-- <div class="heading">
+    <h1 class="col-4 offfset-3">Welcome to the Wanderlust</h1>
   </div>
+  <div id="container">
+    
+    <div><a class="get-started" href="/listings">Get Started</a></div>
+  </div> -->
   
+
+  <div class="div">
+    <h1>Welcome to the Wanderlust</h1> <br>
+    <a class="get-started a" href="/listings">Get Started</a>
+  </div>
